# fido_metadata

./: .gitignore  Cargo.toml  README.md  blob.json  metadata_statement.json  package.json  root_key.pem
src/: App.js  index.js  lib.rs  main.rs  metadata.rs  state.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: errors.rs  lib.rs  main.rs  model.rs
src-tauri/src/data/: database.rs  json_cache.rs  mod.rs  model.rs
src-tauri/test/: metadata.json  x5c_1.pem  x5c_1_key.pem
src/components/: LeftDrawer.js  Metadata.js  PreInput.js  PreTextarea.js  Step.js
src/components/Metadata/: AdvancedSearchBox.js  IDSearchBox.js  ResultsBox.js  SearchBox.js  index.js
src/components/NavBar/: DrawerButton.js  NavbarHeader.js  index.js
